# Langgraph_HR_screening

./: .gitignore  Applicants_screening.ipynb  README.md  pyproject.toml
